# wendell-cli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: milestones.md
src/wendell_ci/: __init__.py  auth.py  cli.py  config.py  gates.py  models.py  remote_client.py  trace.py  worldsim_client.py
tests/: test_auth.py  test_cli.py  test_command_agent_integration.py  test_config.py  test_gates.py  test_remote_client.py  test_worldsim_integration.py
