[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "wendell"
version = "0.1.38"
description = "Wendell CLI for playbook-generated agent test suites and run uploads"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "tomli>=2.0; python_version < '3.11'",
]
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Croppia" },
]
keywords = ["agents", "cli", "evaluation", "testing", "wendell"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://www.wendellai.com"
Repository = "https://github.com/croppia/wendell-cli"
Issues = "https://github.com/croppia/wendell-cli/issues"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
wendell = "wendell_ci.cli:main"

[tool.setuptools]
packages = [
  "wendell_ci",
]
package-dir = { "wendell_ci" = "src/wendell_ci" }
